--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -35,6 +35,8 @@
   }
 
   .background-image {
+    transform: scale(1);
+    transition: transform 2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     width: 100%;
     height: 100%;
     background-position: center;
